<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.uanl.larabarron.dollareto.MainActivity"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    android:weightSum="100">

    <TextView
        android:id="@+id/textPrecioDolar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:textSize="90sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:gravity="center"
        android:text="@string/precio_dolar_default"
        android:layout_weight="35"
        android:clickable="false" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/banco_favorito"
        android:textStyle="bold"
        android:id="@+id/textBancoFavorito"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_weight="5" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="100"
        android:orientation="horizontal">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:inputType="numberDecimal"
            android:ems="6"
            android:maxLength="7"
            android:textAlignment="textEnd"
            android:textSize="40sp"
            android:id="@+id/editTextPesos"
            android:layout_weight="33"
            android:hint="@string/conversion_default"
            android:longClickable="false" />

        <TextView
            android:id="@+id/textEtiquetaPesos"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@android:color/black"
            android:textSize="40sp"
            android:textAlignment="center"
            android:gravity="center"
            android:text="@string/etiqueta_pesos_mexicanos"
            android:layout_weight="60"/>

    </LinearLayout>

    <TextView
        android:id="@+id/textConversionADolares"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="64sp"
        android:textAlignment="center"
        android:gravity="bottom"
        android:text="@string/conversion_default"
        android:layout_weight="18"/>

    <TextView
        android:id="@+id/textEtiquetaDolares"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="64sp"
        android:textAlignment="center"
        android:gravity="top"
        android:layout_weight="18"
        android:text="@string/etiqueta_dolares" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/botonActualizar"
        android:text="@string/actualizar"
        android:textSize="32sp"
        android:background="@android:color/holo_green_dark"
        android:textColor="@android:color/white"
        android:layout_weight="18" />

</LinearLayout>
